bk_ida/gccida/c3/signed_type
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1935:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1950:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 10) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1950:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 10) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1952:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 9) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1952:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 9) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1954:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 8) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1954:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 8) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1956:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 7) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1956:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 7) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1958:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 6) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/c-common.c:1958:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 6) ) 
                       ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/signed_type/src/obj/c-common.o] Error 1
